# cs126-software-design

amazing-adventures/: .gitignore  README.md  pom.xml
amazing-adventures/src/main/java/: Data.java  Direction.java  Game.java  Item.java  Layout.java  Main.java  Player.java  Room.java
amazing-adventures/src/test/java/: DataTest.java  TestDirection.java  TestMain.java  TestPlayer.java  TestRoom.java
amazing-adventures/src/test/test_resources/: default.json  setup.sh  test_cli.sh  test_dont_understand.sh  test_drop.sh  test_examine.sh  test_exit.sh  test_go.sh  test_pickup.sh  test_teleport.sh  test_use.sh
cpp-tictactoe/: .gitignore
cpp-tictactoe/src/: Makefile  main.cpp  tictactoe.cpp  tictactoe.hpp
crazy-cardgame/: README.md  pom.xml
crazy-cardgame/src/main/java/cardgame/: Card.java  Game.java  Main.java  PlayerStrategy.java  PlayerTurn.java  SmartPlayer.java  SmarterPlayer.java  StandardPlayer.java  Tournament.java
crazy-cardgame/src/test/java/cardgame/: CardTest.java  GameTest.java  PlayerTest.java  TournamentTest.java
devious-debugging/: .gitignore
devious-debugging/src/: FinalOutputByteHolder.java  HackerMain.java  TutorialFinished.txt  YourNetID.txt
fantastic-finale/: .gitignore  DEVELOPMENT.md  README.md  lightsout.qbs
fantastic-finale/src/: board.cpp  board.hpp  ofApp.cpp  ofApp.h
fantastic-finale/test/: main.cpp
lavish-linked-lists/: .clang-format  .gitignore  CMakeLists.txt
lavish-linked-lists/liblinkedlist/: CMakeLists.txt
lavish-linked-lists/liblinkedlist/src/: ll.h  ll.hpp
lavish-linked-lists/liblinkedlist/test/: CMakeLists.txt  catch.hpp  main.cpp  test.cpp
mechanized-mining/: .gitignore
mechanized-mining/src/mineopoly/: MineopolyMain.java
mechanized-mining/src/mineopoly/game/: Economy.java  GameBoard.java  GameEngine.java  MinePlayer.java  TurnAction.java  WorldGenerator.java
mechanized-mining/src/mineopoly/graphics/: EconomyDisplayPanel.java  GameBoardDisplayPanel.java  GameInfoDisplayPanel.java  ImageFileFilter.java  ImageManager.java  PlayerInfoDisplayPanel.java  TileRenderLayer.java  UserInterface.java
mechanized-mining/src/mineopoly/item/: InventoryItem.java  ResourceType.java
mechanized-mining/src/mineopoly/replay/: Replay.java  ReplayIO.java  ReplayStrategy.java
mechanized-mining/src/mineopoly/strategy/: MinePlayerStrategy.java  MyStrategy.java  MyStrategyTest.java  Omnibot.java  PlayerBoardView.java  RandomStrategy.java
mechanized-mining/src/mineopoly/tiles/: CrackedTile.java  EmptyTile.java  MarketTile.java  ResourceTile.java  StoneTile.java  Tile.java  TileType.java
mechanized-mining/src/mineopoly/util/: DistanceUtil.java
naive-numbers/: .gitignore  CMakeLists.txt  main.cpp
naive-numbers/libbayes/: CMakeLists.txt
naive-numbers/libbayes/src/: CMakeLists.txt  image.cpp  image.hpp  model.cpp  model.hpp
naive-numbers/libbayes/test/: CMakeLists.txt  catch.hpp  main.cpp  test.cpp
naive-numbers/libbayes/test/resources/: sampleimages  samplelabels
serialized-sportsball/: .gitignore  README.md  pom.xml
serialized-sportsball/src/: Analyze.java  Data.java  Game.java  Goal.java  Pass.java  Player.java  Team.java
serialized-sportsball/test/: DataTest.java
serialized-sportsball/test_resources/: sportsball.json  test_file_contents.txt
serious-snakes/: .gitignore  PROPOSAL.md  README.md
serious-snakes/src/: SnakeFood.cpp  SnakeFood.h  ll.h  ll.hpp  main.cpp  ofApp.cpp  ofApp.h  snake.cpp  snake.h  snakebody.cpp  snakebody.h
streamlined-sudoku/: .gitignore  CMakeLists.txt
streamlined-sudoku/src/: CMakeLists.txt  main.cpp  sudoku.cpp  sudoku.hpp
streamlined-sudoku/test/: CMakeLists.txt  blank.spf  example.spf  invalid_header_1.spf  invalid_header_2.spf  invalid_header_3.spf  tests-main.cpp  tests.cpp
tictactoetesting/: .gitignore  README.md
tictactoetesting/src/com/example/: Evaluation.java  TicTacToe.java
tictactoetesting/test/com/example/: TicTacToeTest.java
